[package]
name = "my_music_db"
author = "Monado"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "1.0"