[package]
name = "russet-cuts"
author = "Monado"
version = "0.0.1"
edition = "2021"
description = "A simple tool to run ios shortcuts"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
